chore: typo in submodules, condition on opening GUI

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,8 +2,8 @@
 	path = TSI
 	url = https://github.com/PCiesielczyk/TSI
 [submodule "DFG_to_yolov5_converter"]
-	path = DFG-to-yolov5-converter
+	path = DFG_to_yolov5_converter
 	url = https://github.com/PCiesielczyk/DFG_to_yolov5_converter
 [submodule "TS_samples_extractor"]
-	path = DFG-to-yolov5-converter
+	path = TS_samples_extractor
 	url = https://github.com/PCiesielczyk/TS_samples_extractor
